tests/errors/queue_pop_empty_panics.ptt
// Runtime-panic test: Queue.pop on an empty queue must abort
// cleanly via the assert(false) path.

use std/queue

spark {
  q is Queue of int()
  yell(q.pop())
}
